# w0lf-c2

./: .gitignore  README.md  package.json  server.js
client/c/: Makefile  README.md  client.c  client.code-workspace  client.h
client/cpp/: Client.sln  Client.vcxproj  Client.vcxproj.filters
client/cpp/Client/: Base64.cpp  Client.cpp  Crypto.cpp
client/cpp/Client/include/: Base64.h  Client.h  Crypto.h
client/go/: README.md  client.go  go.mod
client/js/: client.js  package.json
client/powershell/: client-new.ps1  client.ps1
client/python/: client.py
client/python/tcp_socket/src/: client.py
client/python/tls/src/: client.py
client/rust/: Cargo.toml  README.md  build.rs  client.rs  rust.code-workspace
client/rust/.cargo/: config.toml
client/rust/src/: client.rs  main.rs
plugins/: ClientManager.js  CmdBins.js  FileManager.js  LOLBins.js  Screensaver.js  SystemProfiler.js
src/: server.js
src/channels/: http2.js  socket.js  tls.js  udp.js
src/config/: config.json  configLoader.js
src/modules/: clients.js  commands.js  config.js  encdec.js  handlers.js  helpers.js  logging.js  network.js  plugins.js  queue.js  readline.js  server.js
src/plugins/: FileManager.js  Screensaver.js  SystemProfiler.js
src/typedef/: definitions.js
src/utils/: clients.js  encdec.js  handlers.js  helpers.js  logging.js  network.js  plugins.js  readline.js
