[package]
name = "w0lf_client"
version = "0.2.0"
edition = "2021"
authors = ["Russell Benzing <me@russellbenzing.com>"]
description = "This is an educational project to create a Rust client for W0lf C2."
rust-version = "1.80.1"
readme = "README.md"
license = "GPL-3.0-only"

[dependencies]
time = "0.3.36"
image = "0.25.2"
pbkdf2 = "0.12.2"
sysinfo = "0.31.4"
base64 = "0.22.1"
aes-gcm = "0.10.3"
sha2 = "0.10.8"
chrono = "0.4.38"
rand = "0.8.5"
serde_json = "1.0.127"
hex = "0.4.3"
opencv = "0.92.2"
screenshots = "0.8.10"